--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,72 +1,92 @@
-body{
+body {
+    margin: 0;
     padding: 0;
+    background: rgb(4, 15, 15);
+}
+
+ul {
     margin: 0;
-
-}
-.container{
-    width: 100%;
-    font-family: sans-serif;
-    margin-left: 100px;
-}
-
-nav{
-    background: #75b6a7;
-   
-    
-}
-ul{
-    display: flex;
     list-style: none;
-    margin: 0;
-    
+    overflow: hidden;
+    display: inline-block;
+    width: 350px;
+    padding: 15px 16px;
+    margin-left: 60%;
 }
-ul li{
-    padding: 10px;
-    
+
+li {
+    float: left;
 }
-ul li a{
+
+li a {
     text-decoration: none;
-    color:white;
-
+    color: #fff;
+    padding: 15px 16px;
+    font-family: arial;
 }
 
-
-
-main{
-    background: #afd1c9 ;
-    padding: 40px;
-    text-align: center;
-    color:#eee;
+.container {
+    margin: 0 auto;
+    padding-top: 50px;
 }
 
+.col-2 {
+    margin-top: -80px;
+    margin-left: 47%;
+}
 
+.col-3 {
+    margin-left: 65%;
+    margin-top: -89px;
+}
 
+.col-1 {
+    margin: 0;
+    margin-left: 160px;
+}
 
-aside{
-    background:#2e7261;
-    width: 30%;
+footer {
+    background: #fff;
+    padding: 75px;
+    margin-top: 290px;
+}
+
+a {
+    text-decoration: none;
+    font-family: arial;
+    color: #000;
+}
+
+p {
+    font-family: arial;
+    color: #000;
+}
+
+button {
+    background: green;
+    padding: 7px;
+    width: 100px;
+    border: none;
+}
+
+.col-4 {
+    margin-left: 30%;
+}
+
+#p {
+    color: #fff;
+}
+
+h2 {
+    color: #fff;
+}
+
+#info {
     padding: 10px;
-    
+    width: 200px;
 }
 
-.content{
-    background:#09af86;
-    width: 70%;
-    height: 70vh;
-}
-footer{
-    background: #00bfa5 ;
-    padding: 30px;
-    color:#eee;
-    text-transform:uppercase;
 
-}
-.body-content{
-    display: flex;
-    
-    
-}
-.table-container{
-    width: 100%;
-}
+
+
 
